--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <tr th:each="recipe : ${recipes}">
         <td th:text="${recipe.id}"></td>
         <td th:text="${recipe.description}">Taste Good</td>
+        <td th:text="${recipe.directions}">Taste Good</td>
     </tr>
 </table>
 </body>
